Closed Bug 1779098 Opened 3 years ago Closed 3 years ago

Crash in [@ PLDHashTable::Search | mozilla::PreloadService::LookupPreload]

Categories

(Core :: Layout: Text and Fonts, defect, P3)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox102 --- unaffected
firefox103 --- unaffected
firefox104 --- fixed

People

(Reporter: aosmond, Assigned: aosmond)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/7d359552-efe9-4c1a-a273-ce7cc0220709

Reason: SIGSEGV / SEGV_MAPERR

Top 10 frames of crashing thread:

0 libxul.so PLDHashTable::Search const xpcom/ds/PLDHashTable.cpp:496
1 libxul.so mozilla::PreloadService::LookupPreload const uriloader/preload/PreloadService.cpp:47
2 libxul.so mozilla::dom::FontFaceSetDocumentImpl::StartLoad layout/style/FontFaceSetDocumentImpl.cpp:211
3 libxul.so gfxUserFontEntry::DoLoadNextSrc gfx/thebes/gfxUserFontSet.cpp:536
4 libxul.so gfxUserFontEntry::FontLoadFailed gfx/thebes/gfxUserFontSet.cpp:906
5 libxul.so gfxUserFontEntry::ContinuePlatformFontLoadOnMainThread gfx/thebes/gfxUserFontSet.cpp:891
6 libxul.so mozilla::detail::RunnableMethodImpl<gfxUserFontEntry*, void  xpcom/threads/nsThreadUtils.h:1200
7 libxul.so NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:465
8 libxul.so mozilla::ipc::MessagePump::Run ipc/glue/MessagePump.cpp:85
9 libxul.so MessageLoop::Run ipc/chromium/src/base/message_loop.cc:355

Set release status flags based on info from the regressing bug 1771493

Pushed by aosmond@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/14036a42457b Ensure we check FontFaceSetDocumentImpl::mDocument for nullptr. r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: