Bug 1779098 - Ensure we check FontFaceSetDocumentImpl::mDocument for nullptr. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D151557